# ger_wiki

./: .gitignore  .slugignore  Procfile  README.md  ger_streamlit.py  main.py  pyproject.toml  requirements.txt  setup.sh
app/: requirements.txt
apps/: ger_streamlit.py
configs/: archive_baseline.jsonnet  archive_best.jsonnet  archive_optuna.jsonnet  model_baseline.jsonnet  optuna_fromarchive.jsonnet  optuna_fromarchive_best.jsonnet  optuna_ger_best.jsonnet  space_baseline.jsonnet  space_best.jsonnet  space_optuna.jsonnet  wiki_baseline.jsonnet  wiki_best.jsonnet  wiki_optuna.jsonnet
data_processing/: d1_base_process.py  d2_doccano_process.py
data_processing/data/processed/: wiki_test.conll  wiki_train.conll
data_processing/notebooks/: 01_places.py
data_processing/preprocess/: dbpedia_query.py  doccano_functions.py  spaceeval_conll.py
data_processing/processing/: 01_nom_places.py  01_places.py  02_explore.R  02_nam_places.py
docker/: Dockerfile
ger_wiki/: batch_predictor.py  optimisation.py  predictor.py  reader.py
tests/: test_dataset_reader.py  test_model.py  test_preprocessing.py
tests/fixtures/model/: test_config.jsonnet
tests/fixtures/split_text/: toy_large.txt
