[tool.poetry]
name = "ger_wiki"
version = "0.1.0"
description = ""
authors = ["cjber <cjberragan@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
allennlp = "^1.1.0"
allennlp-models = "^1.1.0"
pandas = "^1.1.0"
jsonlines = "^1.2.0"
sparqlwrapper = "^1.8.5"
matplotlib = "^3.3.1"
plotly = "^4.9.0"
kaleido = "^0.0.3"
geopandas = "^0.8.1"
descartes = "^1.1.0"
geoplot = "^0.4.1"
install = "^1.3.3"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
streamlit = "^0.67.1"
optuna = "^2.2.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
pip = "^20.2.3"
ipython = "^7.18.1"
ipdb = "^0.13.3"
pytest = "^6.1.0"
pylint = "^2.6.0"
neovim = "^0.3.1"
flake8 = "^3.8.3"
psutil = "^5.7.2"
tabulate = "^0.8.7"
gputil = "^1.4.0"
rope = "^0.17.0"
autopep8 = "^1.5.4"
python_language_server = {extras = ["all"], version = "^0.35.1"}
mypy = "^0.790"
sourcery-cli = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
